# quicksftp

./: .gitignore  README.md  main.py  pyproject.toml  test_asyncssh.py  test_path.py  test_pyte.py
.github/workflows/: build.yml
quicksftp/: main.py
quicksftp/core/: config.py  session.py  settings.py  transport.py
quicksftp/database/: user_model.py
quicksftp/ui/components/: progress_bar.py  terminal.py  terminal_widget.py
quicksftp/ui/views/: __init__.py  base_remote_tree.py  batch_rename_dialog.py  directory_diff_dialog.py  editor_widgets.py  local_widgets.py  monitor_widget.py  port_forward_dialog.py  remote_drag_drop.py  remote_file_widget.py  settings_dialog.py  sftp_tab_widget.py  site_manager.py  snippets_widget.py  ssh_keygen_dialog.py  transport_widgets.py  user_widgets.py
quicksftp/utils/: file_utils.py
quickstfp/: main.py
quickstfp/core/: session.py  settings.py  transport.py
quickstfp/database/: user_model.py
quickstfp/ui/components/: progress_bar.py  terminal.py  terminal_widget.py
quickstfp/ui/views/: batch_rename_dialog.py  port_forward_dialog.py  remote_drag_drop.py  remote_file_widget.py  settings_dialog.py  sftp_tab_widget.py  site_manager.py  ssh_keygen_dialog.py  user_widgets.py
tests/: test_crypto.py  test_transport.py
