[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quicksftp"
version = "1.3.6"
description = "跨平台 SFTP/SSH 客户端工具，支持多标签页终端、并发文件传输与站点管理"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.21.1",
    "cryptography>=41.0.0",
    "keyring>=25.7.0",
    "nuitka>=4.1.2",
    "pyqterminal",
    "pyside6>=6.11.1",
    "python-socks[asyncio]>=2.4.4",
    "winuvloop>=0.2.4",
]

[project.scripts]
quicksftp = "quicksftp.main:main"

[project.urls]
Repository = "https://github.com/hanyoukuang/quicksftp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["quicksftp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"

[tool.uv.sources]
pyqterminal = { git = "https://github.com/hanyoukuang/pyqterminal.git" }

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
